--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin: 0;
     background-color: #867baf;
 }
@@ -85,4 +85,57 @@ h1 {
 main {
     max-width: 850px;
     margin: 32px auto;
+} */
+
+* {
+    padding: 0;
+    margin: 0;
+    ;
+}
+
+body {
+    display: flex;
+    overflow: hidden;
+}
+
+main {
+    flex-grow: 1;
+    overflow: scroll;
+}
+
+aside {
+    background-color: #202220;
+    max-width: 350px;
+    display: flex;
+    flex-direction: column;
+    padding: 32px;
+    align-items: center;
+    color: whitesmoke;
+}
+
+.pfp {
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    text-align: 000000000;
+    max-width: 80%;
+    margin-bottom: 12px;
+
+
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: rgb(65, 64, 64);
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 10px 0;
+}
+
+button:hover {
+    background-color: #494949;
+
 }
