--- a/style.css
+++ b/style.css
@@ -87,6 +87,8 @@ main {
     margin: 32px auto;
 } */
 
+@import url('https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Roboto+Slab:wght@100..900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -96,6 +98,7 @@ main {
 body {
     display: flex;
     overflow: hidden;
+    font-family: "Bona Nova SC", serif;
 }
 
 main {
